document the last commit
Signed-off-by: Mattia Rizzolo <mattia@debian.org>

--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,12 @@ ubuntu-dev-tools (0.192) UNRELEASED; urgency=medium
     + Handle the new location of the Debian bullseye security archive.
       Closes: #1001832; LP: #1955116
 
+  [ Mattia Rizzolo ]
+  * requestbackport:
+    + Apply patch from Krytarik Raido and Unit 193 to update the template and
+      workflow after the new Ubuntu Backport process has been established.
+      LP: #1959115
+
  -- Mattia Rizzolo <mattia@debian.org>  Tue, 11 Oct 2022 13:57:46 +0200
 
 ubuntu-dev-tools (0.191) unstable; urgency=medium
