--- a/doc/setup-packaging-environment.1
+++ b/doc/setup-packaging-environment.1
@@ -11,7 +11,7 @@ contributors to get their Ubuntu installation ready for packaging work. It
 ensures that all four components from Ubuntu's official repositories are enabled
 along with their corresponding source repositories. It also installs a minimal
 set of packages needed for Ubuntu packaging work (ubuntu-dev-tools, devscripts,
-debhelper, cdbs, patchutils, pbuilder, and build-essential). Finally, it assists
+debhelper, patchutils, pbuilder, and build-essential). Finally, it assists
 in defining the DEBEMAIL and DEBFULLNAME environment variables.
 
 .SH AUTHORS
