Remove references to architectures not supported in any active Ubuntu release.

--- a/doc/pbuilder-dist.1
+++ b/doc/pbuilder-dist.1
@@ -38,7 +38,7 @@ This optional parameter will attempt to construct a chroot in a foreign
 architecture.
 For some architecture pairs (e.g. i386 on an amd64 install), the chroot
 will be created natively.
-For others (e.g. armel on an i386 install), qemu\-user\-static will be
+For others (e.g. arm64 on an amd64 install), qemu\-user\-static will be
 used.
 Note that some combinations (e.g. amd64 on an i386 install) require
 special separate kernel handling, and may break in unexpected ways.
