--- a/doc/ubuntu-build.1
+++ b/doc/ubuntu-build.1
@@ -38,8 +38,7 @@ operations.
 \fB\-a\fR ARCHITECTURE, \fB\-\-arch\fR=\fIARCHITECTURE\fR
 Rebuild or rescore a specific architecture. Valid
 architectures are:
-armel, armhf, arm64, amd64, hppa, i386, ia64,
-lpia, powerpc, ppc64el, riscv64, s390x, sparc.
+armhf, arm64, amd64, i386, powerpc, ppc64el, riscv64, s390x.
 .TP
 Batch processing:
 .IP
@@ -62,8 +61,7 @@ Rescore builds to <priority>.
 \fB\-\-arch2\fR=\fIARCHITECTURE\fR
 Affect only 'architecture' (can be used several
 times). Valid architectures are:
-armel, armhf, arm64, amd64, hppa, i386, ia64,
-lpia, powerpc, ppc64el, riscv64, s390x, sparc.
+arm64, amd64, i386, powerpc, ppc64el, riscv64, s390x.
 
 .SH AUTHORS
 \fBubuntu-build\fR was written by Martin Pitt <martin.pitt@canonical.com>, and
