--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ ubuntu-dev-tools (0.193ubuntu5) UNRELEASED; urgency=medium
 
   * Remove references to deprecated
     http://people.canonical.com/~ubuntu-archive.
+  * Remove references to architectures not supported in any active
+    Ubuntu release.
 
  -- Steve Langasek <steve.langasek@ubuntu.com>  Tue, 30 May 2023 19:35:57 -0700
 
