--- a/doc/syncpackage.1
+++ b/doc/syncpackage.1
@@ -4,11 +4,11 @@ syncpackage \- copy source packages from Debian to Ubuntu
 .\"
 .SH SYNOPSIS
 .B syncpackage
-[\fIoptions\fR] \fI<.dsc URL/path or package name>\fR
+[\fIoptions\fR] \fI<.dsc URL/path or package name(s)>\fR
 .\"
 .SH DESCRIPTION
-\fBsyncpackage\fR causes a source package to be copied from Debian to
-Ubuntu.
+\fBsyncpackage\fR causes one or more source package(s) to be copied from Debian
+to Ubuntu.
 .PP
 \fBsyncpackage\fR allows you to upload files with the same checksums of the
 Debian ones, as the common script used by Ubuntu archive administrators does,
