running-autopkgtests: Changelog entry, ArgumentParser, refactor, tests
Created a new changelog entry to include addition of the running-autopkgtests
script. This includes a refactor of the original script resulting in a new
module in ubuntutools, test cases, and the addition an argument parser to
allow printing just the queued tests, just the running tests, or both
(default).

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-dev-tools (0.200) UNRELEASED; urgency=medium
+
+  * Add support to see currently running autopkgtests (running-autopkgtests)
+
+ -- Chris Peterson <chris.peterson@canonical.com>  Wed, 14 Feb 2024 14:58:30 -0800
+
 ubuntu-dev-tools (0.199) unstable; urgency=medium
 
   [ Simon Quigley ]
