--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,22 @@
 ubuntu-dev-tools (0.200) UNRELEASED; urgency=medium
 
+  [ Chris Peterson ]
   * Add support to see currently running autopkgtests (running-autopkgtests)
+  * running-autopkgtests: use f-strings
 
   [ Athos Ribeiro ]
   * syncpackage: log LP authentication errors before halting.
 
- -- Chris Peterson <chris.peterson@canonical.com>  Wed, 14 Feb 2024 14:58:30 -0800
+  [ Ying-Chun Liu (PaulLiu) ]
+  * Drop qemu-debootstrap
+    qemu-debootstrap is deprecated for a while. In newer qemu release
+    the command is totally removed. We can use debootstrap directly.
+    Signed-off-by: Ying-Chun Liu (PaulLiu) <paulliu@debian.org>
+
+  [ Logan Rosen ]
+  * Don't rely on debootstrap for validating Ubuntu distro
+
+ -- Gianfranco Costamagna <locutusofborg@debian.org>  Thu, 15 Feb 2024 17:53:48 +0100
 
 ubuntu-dev-tools (0.199) unstable; urgency=medium
 
