Fix license statement in manpage

--- a/doc/ubuntu-build.1
+++ b/doc/ubuntu-build.1
@@ -75,5 +75,4 @@ Act on the named archive (ppa) instead of on the main Ubuntu archive.
 \fBubuntu-build\fR was written by Martin Pitt <martin.pitt@canonical.com>, and
 this manual page was written by Jonathan Patrick Davies <jpds@ubuntu.com>.
 .PP
-Both are released under the terms of the GNU General Public License, version 3
-or (at your option) any later version.
+Both are released under the terms of the GNU General Public License, version 3.
