--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ ubuntu-dev-tools (0.202) UNRELEASED; urgency=medium
     This gets rid of the fugly --arch2 option
   * ubuntu-build: support retrying builds in other states that failed-to-build
   * ubuntu-build: Handling of proposed vs release pocket default for ppas
+  * ubuntu-build: update manpage
 
  -- Gianfranco Costamagna <locutusofborg@debian.org>  Tue, 12 Mar 2024 10:37:09 +0100
 
