--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,9 @@ ubuntu-dev-tools (0.202ubuntu1) UNRELEASED; urgency=medium
 
   * ubuntu-build: handle TOCTOU issue with the "can be retried" value on
     builds.
+  * Recommend sbuild over pbuilder.  sbuild is the tool recommended by
+    Ubuntu developers whose behavior most closely approximates Launchpad
+    builds.
 
  -- Steve Langasek <steve.langasek@ubuntu.com>  Sun, 26 May 2024 12:58:38 -0700
 
