import-bug-from-debian: handle multipart messages
With multipart messages, like #1073996, `import-bug-from-debian` would
produce bug description with this:
```
[<email.message.Message object at 0x7fbe14096fa0>, <email.message.Message object at 0x7fbe15143820>]
```
For that kind of bug, it now produces a correct description with the
plain text parts concatenated in the description, the attachments added
as attachments, and the inline images converted to attachments with an
inline message placeholder.

See #981577 for a particularly weird case now gracefully handled.
If something weirder happens, then the tool will now abort with a clear
message instead of producing garbage.

Closes: #969510

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,14 @@
 ubuntu-dev-tools (0.202ubuntu1) UNRELEASED; urgency=medium
 
+  [ Steve Langasek ]
   * ubuntu-build: handle TOCTOU issue with the "can be retried" value on
     builds.
   * Recommend sbuild over pbuilder.  sbuild is the tool recommended by
     Ubuntu developers whose behavior most closely approximates Launchpad
     builds.
+
+  [ Florent 'Skia' Jacquet ]
+  * import-bug-from-debian: handle multipart message (Closes: #969510)
 
  -- Steve Langasek <steve.langasek@ubuntu.com>  Sun, 26 May 2024 12:58:38 -0700
 
