Fix minor typo in pbuilder-dist(1)
LP: #2096956
Thanks: Rolf Leggewie for the patch
Signed-off-by: Mattia Rizzolo <mattia@debian.org>

--- a/doc/pbuilder-dist.1
+++ b/doc/pbuilder-dist.1
@@ -20,7 +20,7 @@ like for example \fBpbuilder\-feisty\fP, \fBpbuilder\-sid\fP, \fBpbuilder\-gutsy
 .PP
 The same applies to \fBcowbuilder\-dist\fP, which uses cowbuilder. The main
 difference between both is that pbuilder compresses the created chroot as a
-a tarball, thus using less disc space but needing to uncompress (and possibly
+tarball, thus using less disc space but needing to uncompress (and possibly
 compress) its contents again on each run, and cowbuilder doesn't do this.
 
 .SH USAGE
