--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-dev-tools (0.204) UNRELEASED; urgency=medium
+
+  * Update Standards-Version to 4.7.1, no changes needed.
+
+ -- Simon Quigley <tsimonq2@debian.org>  Mon, 24 Feb 2025 18:26:09 -0600
+
 ubuntu-dev-tools (0.203) unstable; urgency=medium
 
   [ Steve Langasek ]
