--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ ubuntu-dev-tools (0.204) UNRELEASED; urgency=medium
   [ Simon Quigley ]
   * Update Standards-Version to 4.7.1, no changes needed.
   * Add several Lintian overrides related to .pyc files.
+  * Add my name to the copyright file.
 
   [ Julien Plissonneau Duquène ]
   * Fix reverse-depends -b crash on packages that b-d on themselves
