--- a/doc/lp-bitesize.1
+++ b/doc/lp-bitesize.1
@@ -1,21 +1,21 @@
-.TH bitesize "1" "May 9 2010" "ubuntu-dev-tools"
+.TH lp-bitesize "1" "May 9 2010" "ubuntu-dev-tools"
 .SH NAME
-bitesize \- Add \fBbitesize\fR tag to bugs and add a comment.
+lp-bitesize \- Add \fBbitesize\fR tag to bugs and add a comment.
 
 .SH SYNOPSIS
-.B bitesize \fR<\fIbug number\fR>
+.B lp-bitesize \fR<\fIbug number\fR>
 .br
-.B bitesize \-\-help
+.B lp-bitesize \-\-help
 
 .SH DESCRIPTION
-\fBbitesize\fR adds a bitesize tag to the bug, if it's not there yet. It
+\fBlp-bitesize\fR adds a bitesize tag to the bug, if it's not there yet. It
 also adds a comment to the bug indicating that you are willing to help with
 fixing it.
 It checks for permission to operate on a given bug first,
 then perform required tasks on Launchpad.
 
 .SH OPTIONS
-Listed below are the command line options for \fBbitesize\fR:
+Listed below are the command line options for \fBlp-bitesize\fR:
 .TP
 .BR \-h ", " \-\-help
 Display a help message and exit.
@@ -48,7 +48,7 @@ The default value for \fB--lpinstance\fR.
 .BR ubuntu\-dev\-tools (5)
 
 .SH AUTHORS
-\fBbitesize\fR and this manual page were written by Daniel Holbach
+\fBlp-bitesize\fR and this manual page were written by Daniel Holbach
 <daniel.holbach@canonical.com>.
 .PP
 Both are released under the terms of the GNU General Public License, version 3.
