--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ ubuntu-dev-tools (0.204) UNRELEASED; urgency=medium
   * Add several Lintian overrides related to .pyc files.
   * Add my name to the copyright file.
   * Rename bitesize to lp-bitesize (Closes: #1076224).
+  * Add a manpage for running-autopkgtests.
 
   [ Julien Plissonneau Duquène ]
   * Fix reverse-depends -b crash on packages that b-d on themselves
