--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-dev-tools (0.204) UNRELEASED; urgency=medium
+ubuntu-dev-tools (0.204) unstable; urgency=medium
 
   [ Simon Quigley ]
   * Update Standards-Version to 4.7.1, no changes needed.
@@ -15,7 +15,7 @@ ubuntu-dev-tools (0.204) UNRELEASED; urgency=medium
   * Fix reverse-depends -b crash on packages that b-d on themselves
     (Closes: #1087760).
 
- -- Simon Quigley <tsimonq2@debian.org>  Mon, 24 Feb 2025 18:26:09 -0600
+ -- Simon Quigley <tsimonq2@debian.org>  Mon, 24 Feb 2025 19:54:39 -0600
 
 ubuntu-dev-tools (0.203) unstable; urgency=medium
 
