--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+ubuntu-dev-tools (0.205) UNRELEASED; urgency=medium
+
+ -- Simon Quigley <tsimonq2@debian.org>  Sat, 01 Mar 2025 11:10:56 -0600
+
 ubuntu-dev-tools (0.204) unstable; urgency=medium
 
   [ Simon Quigley ]
