--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ ubuntu-dev-tools (0.205) UNRELEASED; urgency=medium
     next package.
   * [syncpackage] Add support for -y or --yes, noted that it should be used
     with care.
+  * Update Standards-Version to 4.7.2, no changes needed.
 
  -- Simon Quigley <tsimonq2@debian.org>  Sat, 01 Mar 2025 11:10:56 -0600
 
