Upload to Unstable

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-dev-tools (0.205) UNRELEASED; urgency=medium
+ubuntu-dev-tools (0.205) unstable; urgency=medium
 
   * [syncpackage] When syncing multiple packages, if one of the packages is in
     the sync blocklist, do not exit, simply continue.
@@ -9,7 +9,7 @@ ubuntu-dev-tools (0.205) UNRELEASED; urgency=medium
     with care.
   * Update Standards-Version to 4.7.2, no changes needed.
 
- -- Simon Quigley <tsimonq2@debian.org>  Sat, 01 Mar 2025 11:10:56 -0600
+ -- Simon Quigley <tsimonq2@debian.org>  Sat, 01 Mar 2025 11:29:54 -0600
 
 ubuntu-dev-tools (0.204) unstable; urgency=medium
 
