--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+ubuntu-dev-tools (0.206) UNRELEASED; urgency=medium
+
+ -- Simon Quigley <tsimonq2@debian.org>  Tue, 04 Mar 2025 13:04:30 -0600
+
 ubuntu-dev-tools (0.205) unstable; urgency=medium
 
   * [syncpackage] When syncing multiple packages, if one of the packages is in
