Add a changelog entry

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,8 @@
 ubuntu-dev-tools (0.206) UNRELEASED; urgency=medium
 
+  [ Dan Bungert ]
+  * mk-sbuild: enable pkgmaintainermangler
+
  -- Simon Quigley <tsimonq2@debian.org>  Tue, 04 Mar 2025 13:04:30 -0600
 
 ubuntu-dev-tools (0.205) unstable; urgency=medium
