Add a changelog entry

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,9 @@ ubuntu-dev-tools (0.206) UNRELEASED; urgency=medium
   [ Shengjing Zhu ]
   * import-bug-from-debian: package option is overridden and not used
 
+  [ Fernando Bravo Hernández ]
+  * Parsing arch parameter to getBinaryPackage() (LP: #2081861)
+
  -- Simon Quigley <tsimonq2@debian.org>  Tue, 04 Mar 2025 13:04:30 -0600
 
 ubuntu-dev-tools (0.205) unstable; urgency=medium
