Read ~/.devscripts in a more robust way, to ideally pick up multi-line variables (Closes: #725418).

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,10 @@ ubuntu-dev-tools (0.206) UNRELEASED; urgency=medium
   [ Fernando Bravo Hernández ]
   * Parsing arch parameter to getBinaryPackage() (LP: #2081861)
 
+  [ Simon Quigley ]
+  * Read ~/.devscripts in a more robust way, to ideally pick up multi-line
+    variables (Closes: #725418).
+
  -- Simon Quigley <tsimonq2@debian.org>  Tue, 04 Mar 2025 13:04:30 -0600
 
 ubuntu-dev-tools (0.205) unstable; urgency=medium
