--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,7 @@ ubuntu-dev-tools (0.206) UNRELEASED; urgency=medium
   [ Simon Quigley ]
   * Read ~/.devscripts in a more robust way, to ideally pick up multi-line
     variables (Closes: #725418).
+  * mk-sbuild: default to using UTC for schroots (LP: #2097159).
 
  -- Simon Quigley <tsimonq2@debian.org>  Tue, 04 Mar 2025 13:04:30 -0600
 
