syncpackage: s/syncblacklist/syncblocklist/g

--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,7 @@ ubuntu-dev-tools (0.206) UNRELEASED; urgency=medium
   * Read ~/.devscripts in a more robust way, to ideally pick up multi-line
     variables (Closes: #725418).
   * mk-sbuild: default to using UTC for schroots (LP: #2097159).
+  * syncpackage: s/syncblacklist/syncblocklist/g
 
  -- Simon Quigley <tsimonq2@debian.org>  Tue, 04 Mar 2025 13:04:30 -0600
 
