--- a/doc/syncpackage.1
+++ b/doc/syncpackage.1
@@ -58,7 +58,7 @@ Display more progress information.
 \fB\-F\fR, \fB\-\-fakesync\fR
 Perform a fakesync, to work around a tarball mismatch between Debian and
 Ubuntu.
-This option ignores blacklisting, and performs a local sync.
+This option ignores blocklisting, and performs a local sync.
 It implies \fB\-\-no\-lp\fR, and will leave a signed \fB.changes\fR file
 for you to upload.
 .TP
