Optimize Launchpad collection handling
Various methods in `ubuntutools.lp.lpapicache` iterated over collections
in a pessimal way: they fetched the collection and then fetched each
individual entry in it, when the same information was already available
in the collection response.  Use more idiomatic launchpadlib code for
this instead, which is also much faster.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,10 @@
 ubuntu-dev-tools (0.207) UNRELEASED; urgency=medium
 
+  [ Dan Streetman ]
   * Fix pull-lp-source --upload-queue (LP: #2110061)
+
+  [ Colin Watson ]
+  * Optimize Launchpad collection handling.
 
  -- Dan Streetman <ddstreet@ieee.org>  Tue, 06 May 2025 13:25:22 -0400
 
